<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_settings">

    <fragment
        android:id="@+id/navigation_location"
        android:name="com.eazuapps.findmeapp.ui.location.LocationFragment"
        android:label="@string/title_location"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.eazuapps.findmeapp.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_chats"
        android:name="com.eazuapps.findmeapp.ui.chats.ChatsFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@id/navigation_settings"
        android:name="com.eazuapps.findmeapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>