<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/iv_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/splash_screen_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_217_dp"
        />

    <TextView
        android:id="@+id/tv_locate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_splash"
        android:layout_marginTop="@dimen/margin_74_dp"
        android:text="@string/locate_with"
        android:textAppearance="@style/locate_with" />

    <TextView
        android:id="@+id/tv_locate_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_locate"
        android:layout_margin="@dimen/margin_30_dp"
        android:text="@string/track_the_e"
        android:lineSpacingExtra="3sp"
        android:textAppearance="@style/track_the_e" />

    <Button
        android:id="@+id/btn_get_started"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_locate_text"
        android:layout_marginStart="@dimen/margin_25_dp"
        android:layout_marginEnd="@dimen/margin_25_dp"
        android:layout_marginTop="@dimen/margin_52_dp"
        android:textAllCaps="false"
        android:textAppearance="@style/get_started"
        android:textStyle="bold"
        android:padding="@dimen/margin_15_dp" />


</androidx.constraintlayout.widget.ConstraintLayout>